FIX-clean code , clean comments